--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="screenBackground">#b4d09e</color>
+    <color name="textBackground">#2e7c59</color>
+    <color name="textColor">#f0fbdb</color>
 </resources>
