--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="screenBackground">#b4d09e</color>
+    <color name="screenBackground">#2196F3</color>
     <color name="textBackground">#2e7c59</color>
+    <color name="buttonBackground">#bbdefb</color>
     <color name="textColor">#f0fbdb</color>
 </resources>
